Dele avtale på SMS (#130)
* Refaktor: fjerner ResponseEntity når den ikke behøves

* Operasjon for å dele avtale med deltaker/arbeidsgiver

* Renamer operasjon

* Sjekker at mobilnummeret er gyldig

* Logger at avtale deles med ag/deltaker

* Går bort fra å ha egne eventtyper per rolle. Mer fremtidsrettet muligens om det skulle bli flere roller.

* Slår sammen metoder som er nesten like, blir mer kompakt

* Skriver om tester til å bruke @ParameterizedTest